# ex1

./: CMakeLists.txt  area.c  area.h  dry.c  election.c  election.h  electionTests.c  electionTestsMichal.c  election_tests.c  map.c  map.h  map_example_test.c  map_test.c  map_tests.c  node.c  node.h  tribe.c  tribe.h  utilities.c  utilities.h  utils.c  vote.c  vote.h
